--- a/test_config.yaml
+++ b/test_config.yaml
@@ -15,8 +15,16 @@ firewall:
             action: ACCEPT
             description: "Autorise tous les paquets ICMP (ping, etc.)"
 
+          - protocol: tcp
+            source_ip: any
+            destination_ip: any
+            source_port: any
+            destination_port: 22
+            action: ACCEPT
+            description: "Autorise tous les paquets ICMP (ping, etc.)"
+
       outbound:
-        default_policy: DROP
+        default_policy: ACCEPT
         rules:
           - protocol: icmp
             source_ip: any
